--- a/css/style.css
+++ b/css/style.css
@@ -8334,6 +8334,10 @@ h1, h2, h3, h4, h5,
   .owl-carousel:hover .owl-nav .owl-next {
     right: -25px; }
   .owl-carousel.home-slider {
+    touch-action: pan-y !important;}
+  .owl-carousel.home-slider .slider-item .overlay {
+      pointer-events: none;}
+  .owl-carousel.home-slider {
     position: relative;
     height: 600px;
     z-index: 0; }
